   - my_utils_container_attach_from_resource(): new function.
   - my_utils_quote() is renamed to my_utils_quote_single().
   - my_utils_quote_regexp(): new function.
   - my_utils_unquote_regexp(): new function.
   - my_utils_uri_get_content(): new function.
   - my_utils_window_restore_position(): now returns %TRUE is a position has been restored.
   - ofaBox: have to/from string, to/from dbms (todo #1029).
   - ofaBox: refactoring exports with ofaFileFormat (todo #1030).
   - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to GResource (todo #826).
   - ofaDBMSRootBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDBMSRootBin: migrate to GResource (todo #826).
   - ofaDossierDeletePrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDossierDeletePrefsBin: migrate to GResource (todo #826).
   - ofaFileDir: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormatBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormatBin: migrate to GResource (todo #826).
   - ofaHub: migrate to G_ADD_PRIVATE (todo #994).
   - ofa_idate_filter_setup_bin(): use a GResource path.
   - ofaIPrefsPage: have an error message on init() and apply() methods.
   - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlConnect: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlEditorDisplay: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlEditorDisplay: migrate to GResource (todo #826).
   - ofaMysqlEditorEnter: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlEditorEnter: migrate to GResource (todo #826).
   - ofaMysqlMeta: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPeriod: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPrefsBin: migrate to GResource (todo #826).
   - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).